# troidgen-cpp

./: .gitmodules  README.md  build.sh
src/: CMakeLists.txt  conanfile.txt
src/include/troidgen/: BiggestGroupFilter.hpp  ExactRoomProvider.hpp  ExactRoomProviderValidator.hpp  FloydWarshallSolver.hpp  GraphBuilder.hpp  GroupExtractor.hpp  IRoomGroupFilter.hpp  IRoomGroupValidator.hpp  IRoomProvider.hpp  IRoomValidator.hpp  IWorldComposer.hpp  LayoutBuilder.hpp  LayoutBuilderConfig.hpp  LinkBuilder.hpp  ManualRoomProvider.hpp  MinSizeRoomGroupValidator.hpp  MinSpaceRoomGroupValidator.hpp  OverlapSolver.hpp  OverlapSolverConfig.hpp  RandomRoomProvider.hpp  RoomRestrictionValidator.hpp
src/include/troidgen/renderer/: RectDebugger.hpp
src/include/troidgen/restriction/: RestrictionSet.hpp  RestrictionSetFactory.hpp
src/include/troidgen/room/: Direction.hpp  Link.hpp  LinkInfo.hpp  LinkPair.hpp  Room.hpp  RoomInfo.hpp  RoomType.hpp
src/include/troidgen/util/: Logger.hpp  Matrix2D.hpp  MiscRoomUtils.hpp  RNG.hpp  Rect.hpp  UpperMatrix2D.hpp  Util.hpp  Vec2.hpp
src/src/: BiggestGroupFilter.cpp  ExactRoomProvider.cpp  FloydWarshallSolver.cpp  GraphBuilder.cpp  GroupExtractor.cpp  LayoutBuilder.cpp  LinkBuilder.cpp  ManualRoomProvider.cpp  OverlapSolver.cpp  RandomRoomProvider.cpp
src/src/renderer/: RectDebugger.cpp
src/src/restriction/: RestrictionSet.cpp  RestrictionSetFactory.cpp
src/src/room/: Direction.cpp  Link.cpp  LinkPair.cpp  Room.cpp  RoomInfo.cpp  RoomType.cpp
src/src/util/: MiscRoomUtils.cpp  RNG.cpp  Rect.cpp  Util.cpp  Vec2.cpp
src/tests/: CMakeLists.txt  Test_LayoutBuilder.cpp  Test_LayoutBuilder2.cpp  Test_ManualGeometryProviderBasic.cpp  Test_OverlapSolverManual.cpp  Test_OverlapSolverRandom.cpp  Test_OverlapSolverRandomBig.cpp  Test_OverlapSolverRandomProvider.cpp  Test_RectCollision.cpp  Test_RectTouching.cpp  Test_Restrictions.cpp
